--- a/src/scss/base/_colors.scss
+++ b/src/scss/base/_colors.scss
@@ -10,3 +10,5 @@ $asideTextColor: rgba(27, 28, 33, 1);
 $paginationColorActive: rgba(181, 182, 188, 1);
 $paginationColor: rgba(221, 221, 221, 1);
 $aboutColor: rgba(27, 28, 33, 1);
+
+$btnColor: rgba(255, 62, 121, 1); 
